# slint-painter-example-skia

./: Cargo.toml  LICENSE  README.md  build.rs
src/: commands.rs  main.rs  paint_canvas.rs  undo_stack.rs
ui/: appwindow.slint  paint_canvas.slint  paint_window.slint
